<resources>
    <string name="app_demo_name">CSAS Demo</string>
    <string name="action_settings">Settings</string>

    <string name="application_name">Coolest App Ever</string>
    <string name="registration_screen_text">“Do. Or do not. There is no try.”\n    Yoda</string>
    <string name="locked_screen_text">“In my experience there is no such thing as luck.”\n    Obi-Wan Kenobi</string>
    <string name="unregister_prompt_text">“It’s a trap!”\n    Admiral Ackbar</string>

    <string name="progress_loading">Loading...</string>
    <string name="progress_uploading">Uploading...</string>

    <string name="welcome_text">Hello everybody,\n\n I would love to introduce our new CSAS SDK Demo App.</string>
    <string name="offline_auth_switch_text">Offline Authentication: </string>
    <string name="auth_type_switch_text">Netbanking/Corporate Authentication: </string>
    <string name="locker_status">Your Locker Status is:</string>
    <string name="locker_ui_demo">LockerUI Demo</string>
    <string name="lock_me">Lock</string>
    <string name="uniforms_demo">Uniforms Demo</string>
    <string name="places_demo">Places Demo</string>
    <string name="app_menu_demo">AppMenu Demo</string>
    <string name="trans_acc_demo">TransAcc Demo</string>
    <string name="netbanking_demo">Netbanking Demo</string>
    <string name="corporate_demo">Corporate Demo</string>
    <string name="form_save">Save</string>
    <string name="form_submit">Submit</string>
    <string name="hint_et">Tap here to edit </string>
    <string name="pobocky_list">Click here to pick your Pobočka</string>
    <string name="attachment">Click here to pick your file</string>
    <string name="form_list_id">Form&#160;</string>
    <string name="offline_auth_verified">Verified Offline</string>
    <string name="offline_auth_not_verified">Not Verified Offline</string>


    <string name="camera_retake">RETAKE</string>
    <string name="camera_upload">UPLOAD</string>

    <string name="place_placeholder_no_items">No place found for current area. Try to search again!</string>
    <string name="autocomplete_placeholder">No place found for current query. Try to search again!</string>
    <string name="place_setting">SETTINGS</string>
    <string name="place_filter">Filter Places:</string>
    <string name="radius">Radius %1$d m</string>
    <string name="sort_address">ADDRESS</string>
    <string name="sort_city">CITY</string>
    <string name="sort_post_code">POST CODE</string>
    <string name="filter_atms">ATM</string>
    <string name="filter_branches">BRANCH</string>
    <string name="floating_button_settings">Settings</string>
    <string name="floating_button_list_of_places">List of Places</string>
    <string name="floating_button_place_autocomplete">Place Autocomplete</string>
    <string name="detail_id">Identifier:</string>
    <string name="detail_location">Location:</string>
    <string name="detail_type">Type:</string>
    <string name="detail_state">State:</string>
    <string name="detail_state_note">State Note:</string>
    <string name="detail_address">Address:</string>
    <string name="detail_city">City:</string>
    <string name="detail_postcode">Postcode:</string>
    <string name="detail_region">Region:</string>
    <string name="detail_country">Country:</string>
    <string name="detail_distance">Distance:</string>
    <string name="detail_opening_hours">Opening Hours</string>
    <string name="detail_monday">MONDAY</string>
    <string name="detail_tuesday">TUESDAY</string>
    <string name="detail_wednesday">WEDNESDAY</string>
    <string name="detail_thursday">THURSDAY</string>
    <string name="detail_friday">FRIDAY</string>
    <string name="detail_saturday">SATURDAY</string>
    <string name="detail_sunday">SUNDAY</string>
    <string name="detail_services">Services</string>
    <string name="place_not_found">No place found.</string>

    <string name="install_appmenu">INSTALL</string>
    <string name="open_appmenu">OPEN</string>
    <string name="fake_version_appmenu">FAKE VERSION:&#160;&#160;&#160;&#160;&#160;</string>
    <string name="appmenu_placeholder">No application available. Refresh to check again!</string>
    <string name="appmenu_version">Version Checking</string>
    <string name="appmenu_outdated">&#160;is outdated. Please go to Google Play store and update it.</string>
    <string name="appmenu_positive">Google Play&#160;&#160;&#160;</string>
    <string name="appmenu_negative">Cancel</string>

    <string name="trans_acc_acc_number">Account Number:</string>
    <string name="trans_acc_bank_code">Bank Code:</string>
    <string name="trans_acc_balance">Balance:</string>
    <string name="trans_acc_currency">Currency:</string>
    <string name="trans_acc_iban">IBAN:</string>
    <string name="trans_acc_tran_from">Transparency From:</string>
    <string name="trans_acc_trans_to">Transparency To:</string>
    <string name="trans_acc_pub_to">Publication To:</string>
    <string name="trans_acc_act_date">Actualisation Date:</string>
    <string name="trans_acc_name">Name:</string>
    <string name="trans_acc_desc">Description:</string>
    <string name="trans_acc_note">Note:</string>
    <string name="trans_acc_transactions">Transactions</string>
    <string name="trans_acc_placeholder">No transparent accounts available. Refresh to check again!</string>
    <string name="trans_acc_transaction">Transaction</string>
    <string name="trans_acc_receiver">Receiver</string>
    <string name="trans_acc_sender">Sender</string>
    <string name="trans_acc_amount">Amount:</string>
    <string name="trans_acc_type">Type:</string>
    <string name="trans_acc_due_date">DueDate:</string>
    <string name="trans_acc_process_date">ProcessingDate:</string>
    <string name="trans_acc_vs">Variable Symbol:</string>
    <string name="trans_acc_cs">Constant Symbol:</string>
    <string name="trans_acc_ssp">Specific Symbol Party:</string>
    <string name="trans_acc_ss">Specific Symbol:</string>

    <string name="netbanking_demo_text">Netbanking Demo</string>
    <string name="netbanking_run_all">Run all</string>
    <string name="netbanking_accounts_placeholder">No accounts available. Refresh to check again!</string>
    <string name="netbanking_payments_placeholder">No payments available. Refresh to check again!</string>
    <string name="netbanking_accountno">Accountno: </string>
    <string name="netbanking_acc_number">Account Number:</string>
    <string name="netbanking_bank_code">Bank Code:</string>
    <string name="netbanking_balance">Balance:</string>
    <string name="netbanking_currency">Currency:</string>
    <string name="netbanking_iban">IBAN:</string>
    <string name="netbanking_cziban">CZ IBAN:</string>
    <string name="netbanking_bic">BIC:</string>
    <string name="netbanking_czbic">CZ BIC:</string>
    <string name="netbanking_country_code">Country Code:</string>
    <string name="netbanking_sender">Sender: </string>
    <string name="netbanking_receiver">Receiver: </string>
    <string name="netbanking_payment">Payment</string>
    <string name="netbanking_amount">Amount:</string>
    <string name="netbanking_type">Type:</string>
    <string name="netbanking_category">Category:</string>
    <string name="netbanking_state">State:</string>
    <string name="netbanking_execution_date">ExecutionDate:</string>
    <string name="netbanking_name">Name:</string>
    <string name="netbanking_sender_title">Sender</string>
    <string name="netbanking_receiver_title">Receiver</string>
    <string name="netbanking_domestic_payment_title">Create Domestic Payment</string>
    <string name="netbanking_domestic_payment_start_signing">Start Signing</string>
    <string name="netbanking_domestic_payment_finish_signing">Finish Signing</string>
    <string name="netbanking_progress_signing">Signing...</string>
    <string name="netbanking_accounts_title">Accounts</string>
    <string name="netbanking_payments_title">Payments</string>
    <string name="netbanking_tests_title">Tests</string>
    <string name="netbanking_authorization_type_mobile_case">Mobile Case</string>
    <string name="netbanking_authorization_type_tac">TAC</string>
    <string name="netbanking_authorization_type_none">None</string>

    <string name="corporate_demo_text">Corporate Demo</string>
    <string name="corporate_companies_title">Companies</string>
    <string name="corporate_accounts_title">Accounts</string>
    <string name="corporate_transactions_title">Transactions</string>
    <string name="corporate_balance">Balance</string>
    <string name="corporate_disposable">Disposable</string>
    <string name="corporate_min_balance">Min Balance</string>
    <string name="corporate_overdraft">Overdraft</string>
    <string name="corporate_overdraft_due_date">Overdraft Due Date</string>
    <string name="corporate_transactions_placeholder">No transactions available. Refresh to check again!</string>
    <string name="corporate_company_placeholder">No companies available. Refresh to check again!</string>
    <string name="corporate_reg_num">ICO</string>
    <string name="corporate_tax_num">DIC</string>
    <string name="corporate_legal_form">Legal Form</string>
    <string name="corporate_legal_form_i18n">Localized Legal Form</string>
    <string name="corporate_name">Name</string>
    <string name="corporate_cnb_type">Cnb Type</string>
    <string name="corporate_cnb_type_i18n">Localized Cnb Type</string>
    <string name="corporate_industry_category">NACE</string>
    <string name="corporate_industry_category_i18n">Localized NACE</string>
    <string name="corporate_sector">CSU Sector</string>
    <string name="corporate_sector_i18n">Localized CSU Sector</string>
    <string name="corporate_relationship_type">Relationship Type</string>
    <string name="corporate_relationship_type_i18n">Localized Relationship Type</string>
    <string name="corporate_campaigns_title">Campaigns</string>
    <string name="corporate_relationship_managers_title">Relationship Managers</string>
    <string name="corporate_campaigns_placeholder">No campaigns available. Refresh to check again!</string>
    <string name="corporate_relationship_managers_placeholder">No relationship managers available. Refresh to check again!</string>


</resources>
