<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_acc_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_acc_number"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_acc_bank_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_bank_code"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_balance"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_currency"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_iban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_iban"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_transparency_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_tran_from"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_transparency_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_trans_to"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_publication_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_pub_to"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_actualisation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_act_date"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_name"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_desc"
            app:setValue="-" />

        <cz.csas.demo.components.DetailItem
            android:id="@+id/pdi_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:setTitle="@string/trans_acc_note"
            app:setValue="-" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dip"
            android:layout_marginBottom="10dip">

            <Button
                android:layout_width="250dip"
                android:layout_height="43dip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dip"
                android:background="@drawable/button_round_blue" />

            <Button
                android:id="@+id/btn_transactions"
                android:layout_width="250dip"
                android:layout_height="40dip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_round_white"
                android:text="@string/trans_acc_transactions"
                android:textColor="@color/csasColorPrimary"
                android:textSize="13sp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>